fix: gap and text

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -18,12 +18,13 @@
 }
 .caption {
   text-align: right;
+  padding-bottom: 15px;
   font-size: 11px;
 }
 
 .caption-text {
-  padding-bottom: 30px;
   margin-left: 50px;
+  margin-top: 10px;
   @media only screen and (max-width: 400px) {
     font-size: 11px;
   }
